fixing text align center for all screen sizes

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ html {
   flex-direction: column;
   align-items: center;
   font-size: 1.5rem;
+  text-align: center;
 }
 button {
   margin: 1rem;
